# Langgraph-func-api

Parallel/parallel_pr/: pyproject.toml
Prompt_Chaining/customer_support_email/output/: customer_support_email.txt
Prompt_Chaining/customer_support_email/src/customer_support_email/: __init__.py  run.py
Prompt_Chaining/multilingual_marketing_copy/output/: marketing_copy.md  marketing_copy_French.txt  marketing_copy_Japanese.txt
Prompt_Chaining/multilingual_marketing_copy/src/multilingual_marketing_copy/: workflow.py
Prompt_Chaining/prompt_chaining_pr/: pyproject.toml
Prompt_Chaining/prompt_chaining_pr/src/prompt_chaining_pr/: __init__.py
Prompt_Chaining/summarizing_research_papers/: pyproject.toml
Prompt_Chaining/summarizing_research_papers/output/: refined_insights.txt
Prompt_Chaining/summarizing_research_papers/src/summarizing_research_papers/: __init__.py  run.py  workflow.py
customer_support_email/: README.md  pyproject.toml
customer_support_email/src/customer_support_email/: workflow.py
multilingual_marketing_copy/: pyproject.toml
multilingual_marketing_copy/output/: marketing_copy_English.txt  marketing_copy_Mandarin Chinese.txt  marketing_copy_Spanish.txt
multilingual_marketing_copy/src/multilingual_marketing_copy/: __init__.py  run.py
parallel_pr/src/parallel_pr/: __init__.py  parallel.py
prompt_chaining_pr/src/prompt_chaining_pr/: simple_workflow.py
routing_pr/: pyproject.toml
routing_pr/src/routing_pr/: hello_router.py
