[project]
name = "multilingual-marketing-copy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Humza134", email = "mhumza13420@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.0.11",
    "langgraph>=0.3.2",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]

[project.scripts]
invoke = "multilingual_marketing_copy:main"
stream = "multilingual_marketing_copy:stream"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
