[project]
name = "prompt-chaining-pr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Humza134", email = "mhumza13420@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.0.9",
    "langgraph>=0.2.71",
    "python-dotenv>=1.0.1",
]

[project.scripts]
prompt-chaining-pr = "prompt_chaining_pr:main"
simpleflow = "prompt_chaining_pr.simple_workflow:run_chain"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
